add matlab ctest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,7 +128,7 @@ target_link_libraries(gemini PRIVATE mpimod io neutral precipBCs temporal multif
 target_include_directories(gemini PRIVATE ${MUMPS_INCLUDE_DIRS} ${MPI_Fortran_INCLUDE_DIRS})
 
 # -- test main exe ---
-set(INDIR ${CMAKE_CURRENT_SOURCE_DIR}/simulations/2Dtest_files/2Dtest_output)
+set(INDIR $ENV{HOME}/sim/gemini/2Dtest_files/2Dtest_output)
 set(OUTDIR ${CMAKE_CURRENT_BINARY_DIR}/test2d)
 
 add_test(NAME RunGemini-2D 
@@ -147,7 +147,19 @@ add_test(NAME ReferenceCompare
          COMMAND octave-cli -q --eval "compare_all('${OUTDIR}','${INDIR}')"
          WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/tests)
 set_tests_properties(ReferenceCompare PROPERTIES
-                     TIMEOUT 5
-                     FIXTURES_REQUIRED GemMain)
+                     TIMEOUT 5)
+                     #FIXTURES_REQUIRED GemMain)
+
+endif()
+
+# check that *.m syntax is Matlab compatible
+find_package(Matlab COMPONENTS MAIN_PROGRAM)
+if (Matlab_FOUND)
+add_test(NAME MatlabCompare 
+         COMMAND matlab -nojvm -r "compare_all('${OUTDIR}','${INDIR}'); exit"
+         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/tests)
+set_tests_properties(MatlabCompare PROPERTIES
+                     TIMEOUT 15)
+                     #FIXTURES_REQUIRED GemMain)
 
 endif()
