--- a/initialize/2Dtest/config.ini
+++ b/initialize/2Dtest/config.ini
@@ -9,13 +9,13 @@
 0
 2
 0
-../../sim/gemini/2Dtest_files/2Dtest_input/simsize.dat
-../../sim/gemini/2Dtest_files/2Dtest_input/simgrid.dat
-../../sim/gemini/2Dtest_files/2Dtest_input/2Dtest_ICs.dat
+../testdata/2Dtest_files/2Dtest_input/simsize.dat
+../testdata/2Dtest_files/2Dtest_input/simgrid.dat
+../testdata/2Dtest_files/2Dtest_input/2Dtest_ICs.dat
 0
 1
 5.0
-../../sim/gemini/2Dtest_files/2Dtest_input/test_particles/
+../testdata/2Dtest_files/2Dtest_input/test_particles/
 1
 1.0
-../../sim/gemini/2Dtest_files/2Dtest_input/test_fields/
+../testdata/2Dtest_files/2Dtest_input/test_fields/
