limit MPI cores

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,7 +137,7 @@ target_include_directories(gemini PRIVATE ${MUMPS_INCLUDE_DIRS} ${MPI_Fortran_IN
 # -- test main exe ---
 
 add_test(NAME RunGemini-2D 
-         COMMAND mpirun ./gemini ${CMAKE_SOURCE_DIR}/initialize/2Dtest/config.ini ${TESTOUTDIR} 
+         COMMAND mpirun -np 4 ./gemini ${CMAKE_SOURCE_DIR}/initialize/2Dtest/config.ini ${TESTOUTDIR} 
          WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
 set_tests_properties(RunGemini-2D PROPERTIES 
                      TIMEOUT 900  # test should complete in under 15 minutes on ~ 2014 dual-core laptop
@@ -164,7 +164,7 @@ add_test(NAME MatlabCompare
          COMMAND matlab -nojvm -r "compare_all('${TESTOUTDIR}','${TEST_REFERENCE_DIR}'); exit"
          WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/tests)
 set_tests_properties(MatlabCompare PROPERTIES
-                     TIMEOUT 15)
+                     TIMEOUT 30)  # Matlab with a lot of toolboxes takes ~ 15 seconds just to start
                      #FIXTURES_REQUIRED GemMain)
 
 endif()
