add expanduser() to allow ~ tilde path specs

--- a/initialize/2Dtest/config.ini
+++ b/initialize/2Dtest/config.ini
@@ -9,13 +9,13 @@
 0
 2
 0
-../testdata/2Dtest_files/2Dtest_input/simsize.dat
-../testdata/2Dtest_files/2Dtest_input/simgrid.dat
-../testdata/2Dtest_files/2Dtest_input/2Dtest_ICs.dat
+~/sim/gemini/2Dtest_files/2Dtest_input/simsize.dat
+~/sim/gemini/2Dtest_files/2Dtest_input/simgrid.dat
+~/sim/gemini/2Dtest_files/2Dtest_input/2Dtest_ICs.dat
 0
 1
 5.0
-../testdata/2Dtest_files/2Dtest_input/test_particles/
+~/sim/gemini/2Dtest_files/2Dtest_input/test_particles/
 1
 1.0
-../testdata/2Dtest_files/2Dtest_input/test_fields/
+~/sim/gemini/2Dtest_files/2Dtest_input/test_fields/
