--- a/initialize/2Dtest/config.ini
+++ b/initialize/2Dtest/config.ini
@@ -9,13 +9,13 @@
 0
 2
 0
-~/sim/gemini/2Dtest_files/2Dtest_input/simsize.dat
-~/sim/gemini/2Dtest_files/2Dtest_input/simgrid.dat
-~/sim/gemini/2Dtest_files/2Dtest_input/2Dtest_ICs.dat
+../../simulations/input/2Dtest/simsize.dat
+../../simulations/input/2Dtest/simgrid.dat
+../../simulations/input/2Dtest/2Dtest_ICs.dat
 0
 1
 5.0
-~/sim/gemini/2Dtest_files/2Dtest_input/test_particles/
+../../simulations/input/2Dtest_particles/
 1
 1.0
-~/sim/gemini/2Dtest_files/2Dtest_input/test_fields/
+../../simulations/input/2Dtest_fields/
