--- a/initialize/2Dtest/config.ini
+++ b/initialize/2Dtest/config.ini
@@ -9,13 +9,13 @@
 0
 2
 0
-../../simulations/input/2Dtest/simsize.dat
-../../simulations/input/2Dtest/simgrid.dat
-../../simulations/input/2Dtest/2Dtest_ICs.dat
+~/zettergmdata/testdata/2Dtest_files/2Dtest_input/simsize.dat
+~/zettergmdata/testdata/2Dtest_files/2Dtest_input/simgrid.dat
+~/zettergmdata/testdata/2Dtest_files/2Dtest_input/2Dtest_ICs.dat
 0
 1
 5.0
-../../simulations/input/2Dtest_particles/
+~/zettergmdata/testdata/2Dtest_files/2Dtest_input/2Dtest_particles/
 1
 1.0
-../../simulations/input/2Dtest_fields/
+~/zettergmdata/testdata/2Dtest_files/2Dtest_input/2Dtest_fields/
