--- a/initialize/3Dtest/config.ini
+++ b/initialize/3Dtest/config.ini
@@ -9,13 +9,13 @@
 0
 1
 0
-../../simulations/input//3Dtest/simsize.dat
-../../simulations/input//3Dtest/simgrid.dat
-../../simulations/input//3Dtest/3Dtest_ICs.dat
+../simulations/input//3Dtest/simsize.dat
+../simulations/input//3Dtest/simgrid.dat
+../simulations/input//3Dtest/3Dtest_ICs.dat
 0
 1
 5.0
-../../simulations/input/3Dtest_particles/
+../simulations/input/3Dtest_particles/
 1
 1.0
-../../simulations/input/3Dtest_fields/
+../simulations/input/3Dtest_fields/
