Squashed commit of the following:
commit bf884c5b70cb861756b2ddd7e4491f558354e4e9
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Sat Oct 27 21:43:51 2018 -0400

    correct type wp

commit 6624be8c989b8b0bfb5490aeaefac96cf8c09f45
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Sat Oct 27 21:30:18 2018 -0400

    vendor msis, cleanup Octave cmake find

commit 4faa5ceba4fa57e94ce3494a84ebe5d38fad625f
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Sat Oct 27 21:16:21 2018 -0400

    put performance reducing compiler options in Debug builds only

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required (VERSION 3.7)
+cmake_minimum_required (VERSION 3.11)
 project(gemini3d Fortran C)
 enable_testing()
 
@@ -18,8 +18,8 @@ include(${PROJECT_SOURCE_DIR}/cmake/libraries.cmake)
 # --- Build Gemini
 include_directories(${CMAKE_CURRENT_BINARY_DIR}/numerical)
 
-add_library(msis neutral/msis00/msis00_gfortran.f)
-target_compile_options(msis PRIVATE -w -fno-implicit-none)
+add_library(msis vendor/msis00/msis00_gfortran.f)
+target_compile_options(msis PRIVATE -std=legacy -w -fno-implicit-none)
 
 add_subdirectory(numerical)
 
