--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ionization/glow"]
 	path = ionization/glow
-	url = https://github.com/guygrubbs/GLOWv0982.git
+	url = https://github.com/NCAR/GLOW.git
